@@ -1912,7 +1912,8 @@ do_auth()
 				     &gcontext,
 				     target_name,
 				     GSS_C_NULL_OID,
-				     GSS_C_MUTUAL_FLAG | GSS_C_REPLAY_FLAG,
+				     GSS_C_MUTUAL_FLAG | GSS_C_REPLAY_FLAG |
+				     (forward ? GSS_C_DELEG_FLAG : 0),
 				     0,
 				     &chan,	/* channel bindings */
 				     token_ptr,
@@ -1923,7 +1924,8 @@ do_auth()
 	      
 
 	      if (maj_stat!=GSS_S_COMPLETE && maj_stat!=GSS_S_CONTINUE_NEEDED){
-		user_gss_error(maj_stat, min_stat, "initializing context");
+		if (service_name == end_service_name)
+		  user_gss_error(maj_stat, min_stat, "initializing context");
 		(void) gss_release_name(&min_stat, &target_name);
 		/* could just be that we missed on the service name */
 		goto outer_loop;
